==> loogg/STM32F4_ATK_Explorer_NANO/Modules/drivers/eth/drv_eth.c <==
#include "netif/ethernetif.h"
#include "lwip/stats.h"
#include "lwip/snmp.h"
#include <board.h>
#include <string.h>
#define DBG_TAG "drv.eth"
#define DBG_LVL DBG_INFO
#include <rtdbg.h>
#define IP_ADDR0 (uint8_t)192
#define IP_ADDR1 (uint8_t)168
#define IP_ADDR2 (uint8_t)2
#define IP_ADDR3 (uint8_t)32
#define NETMASK_ADDR0 (uint8_t)255
#define NETMASK_ADDR1 (uint8_t)255
#define NETMASK_ADDR2 (uint8_t)255
#define NETMASK_ADDR3 (uint8_t)0
#define GW_ADDR0 (uint8_t)192
#define GW_ADDR1 (uint8_t)168
#define GW_ADDR2 (uint8_t)2
#define GW_ADDR3 (uint8_t)1
#define ETH_RESET_Pin       GPIO_PIN_3
#define ETH_RESET_GPIO_Port GPIOD
#define __is_print(ch) ((unsigned int)((ch) - ' ') < 127u - ' ')

static void phy_reset(void) {
    HAL_GPIO_WritePin(ETH_RESET_GPIO_Port, ETH_RESET_Pin, GPIO_PIN_RESET);
    HAL_Delay(50);
    HAL_GPIO_WritePin(ETH_RESET_GPIO_Port, ETH_RESET_Pin, GPIO_PIN_SET);
}

static void phy_linkchange(void) {
    static uint8_t phy_speed = 0;
    uint8_t phy_speed_new = 0;
    uint32_t phyreg = 0;

    if (HAL_ETH_ReadPHYRegister(&EthHandle, PHY_BSR, &phyreg) != HAL_OK) {
        LOG_E("read phy basic reg faild");
        return;
    }

    LOG_D("phy basic status reg is 0x%X", phyreg);

    if (phyreg & (PHY_LINKED_STATUS | PHY_AUTONEGO_COMPLETE)) {
        phyreg = 0;

        phy_speed_new |= ETH_DEVICE_PHY_LINK;

        if (HAL_ETH_ReadPHYRegister(&EthHandle, PHY_SR, &phyreg) != HAL_OK) {
            LOG_E("read phy status reg faild");
            return;
        }
        LOG_D("phy control status reg is 0x%X", phyreg);

        if ((phyreg & PHY_SPEED_STATUS) != PHY_SPEED_STATUS) {
            phy_speed_new |= ETH_DEVICE_PHY_100M;
        }

        if (phyreg & PHY_DUPLEX_STATUS) {
            phy_speed_new |= ETH_DEVICE_PHY_FULL_DUPLEX;
        }
    }

    if (phy_speed != phy_speed_new) {
        phy_speed = phy_speed_new;

        if (_device.parent.rx_indicate != RT_NULL) {
            _device.parent.rx_indicate(&_device.parent, ETH_DEVICE_RX_NOTIFY_TYPE_LINK | ((uint32_t)phy_speed << 8));
        }
    }
}

static void phy_monitor_thread_entry(void *parameter) {
    LOG_D("RESET PHY!");

    HAL_ETH_WritePHYRegister(&EthHandle, PHY_BCR, PHY_RESET);
    HAL_Delay(2000);
    HAL_ETH_WritePHYRegister(&EthHandle, PHY_BCR, PHY_AUTONEGOTIATION);

    while (1) {
        rt_thread_mdelay(500);
        phy_linkchange();
    }
}

static rt_err_t rt_stm32_eth_init(rt_device_t dev) {
    rt_err_t state = RT_EOK;
    rt_thread_t tid = RT_NULL;

    /* Prepare receive and send buffers */
    Rx_Buff = (rt_uint8_t *)rt_calloc(ETH_RXBUFNB, ETH_MAX_PACKET_SIZE);
    if (Rx_Buff == RT_NULL) {
        LOG_E("No memory");
        state = -RT_ENOMEM;
        goto __exit;
    }

    Tx_Buff = (rt_uint8_t *)rt_calloc(ETH_TXBUFNB, ETH_MAX_PACKET_SIZE);
    if (Tx_Buff == RT_NULL) {
        LOG_E("No memory");
        state = -RT_ENOMEM;
        goto __exit;
    }

    DMARxDscrTab = (ETH_DMADescTypeDef *)rt_calloc(ETH_RXBUFNB, sizeof(ETH_DMADescTypeDef));
    if (DMARxDscrTab == RT_NULL) {
        LOG_E("No memory");
        state = -RT_ENOMEM;
        goto __exit;
    }

    DMATxDscrTab = (ETH_DMADescTypeDef *)rt_calloc(ETH_TXBUFNB, sizeof(ETH_DMADescTypeDef));
    if (DMATxDscrTab == RT_NULL) {
        LOG_E("No memory");
        state = -RT_ENOMEM;
        goto __exit;
    }

    phy_init();
    phy_reset();

    EthHandle.Instance = ETH;
    EthHandle.Init.MACAddr = _device.macaddr;
    EthHandle.Init.AutoNegotiation = ETH_AUTONEGOTIATION_DISABLE;
    EthHandle.Init.Speed = ETH_SPEED_100M;
    EthHandle.Init.DuplexMode = ETH_MODE_FULLDUPLEX;
    EthHandle.Init.MediaInterface = ETH_MEDIA_INTERFACE_RMII;
    EthHandle.Init.RxMode = ETH_RXINTERRUPT_MODE;
    EthHandle.Init.ChecksumMode = ETH_CHECKSUM_BY_HARDWARE;
    EthHandle.Init.PhyAddress = LAN8720A_PHY_ADDRESS;

    HAL_ETH_DeInit(&EthHandle);

    /* configure ethernet peripheral (GPIOs, clocks, MAC, DMA) */
    if (HAL_ETH_Init(&EthHandle) != HAL_OK) {
        LOG_E("eth hardware init failed");
    } else {
        LOG_D("eth hardware init success");
    }

    /* Initialize Tx Descriptors list: Chain Mode */
    HAL_ETH_DMATxDescListInit(&EthHandle, DMATxDscrTab, Tx_Buff, ETH_TXBUFNB);

    /* Initialize Rx Descriptors list: Chain Mode  */
    HAL_ETH_DMARxDescListInit(&EthHandle, DMARxDscrTab, Rx_Buff, ETH_RXBUFNB);

    tid = rt_thread_create("phy", phy_monitor_thread_entry, RT_NULL, 1024, RT_THREAD_PRIORITY_MAX - 5, 2);
    if (tid != RT_NULL) {
        rt_thread_startup(tid);
    } else {
        LOG_E("create phy monitor thread failed");
        state = -RT_ERROR;
    }

__exit:
    if (state != RT_EOK) {
        if (Rx_Buff) {
            rt_free(Rx_Buff);
        }

        if (Tx_Buff) {
            rt_free(Tx_Buff);
        }

        if (DMARxDscrTab) {
            rt_free(DMARxDscrTab);
        }

        if (DMATxDscrTab) {
            rt_free(DMATxDscrTab);
        }
    }

    return state;
}

void HAL_ETH_RxCpltCallback(ETH_HandleTypeDef *heth) {
    rt_err_t ret = -RT_ERROR;

    if (_device.parent.rx_indicate != RT_NULL) {
        ret = _device.parent.rx_indicate(&_device.parent, ETH_DEVICE_RX_NOTIFY_TYPE_INPUT);
    }

    if (ret != RT_EOK)
    {
        LOG_I("RxCpltCallback err = %d", ret);
    }
}

static int rt_hw_stm32_eth_init(void) {
    rt_device_t dev = &_device.parent;

    dev->type = RT_Device_Class_NetIf;
    dev->rx_indicate = RT_NULL;
    dev->tx_complete = RT_NULL;

    dev->init = rt_stm32_eth_init;
    dev->open = RT_NULL;
    dev->close = RT_NULL;
    dev->read = RT_NULL;
    dev->write = RT_NULL;
    dev->control = RT_NULL;

    rt_device_register(dev, "e0", RT_DEVICE_FLAG_RDWR);

    /* OUI 00-80-E1 STMICROELECTRONICS. */
    _device.macaddr[0] = 0x00;
    _device.macaddr[1] = 0x80;
    _device.macaddr[2] = 0xE1;
    /* generate MAC addr from 96bit unique ID (only for test). */
    _device.macaddr[3] = *(rt_uint8_t *)(UID_BASE + 4);
    _device.macaddr[4] = *(rt_uint8_t *)(UID_BASE + 2);
    _device.macaddr[5] = *(rt_uint8_t *)(UID_BASE + 0);

    _device.eth_rx = stm32_eth_rx;
    _device.eth_tx = stm32_eth_tx;
    _device.eth_link_change = stm32_eth_link_change;

    return RT_EOK;
}
